# python_package_conda-build_flit

./: README.md  meta.yaml  pyproject.toml
trial_p/: __init__.py  __main__.py  useless_module.py
